--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <div class="center-text">
-            <h1>Our Basket</h1>
-            <img class="logo" src="img/LOGO.png" />
+            <h1>
+                <img class="logo" src="img/LOGO.png" />
+                Our Basket
+            </h1>
         </div>
         <div class="center-text">
             <h4>
@@ -20,12 +22,12 @@
         <div>
             <table>
                 <tr>
-                    <td class="center-text">Team 1</td>
-                    <td class="center-text">Team 2</td>
+                    <td class="center-text big-text">Team 1</td>
+                    <td class="center-text big-text">Team 2</td>
                 </tr>
                 <tr>
-                    <td class="center-text">Score 1:0</td>
-                    <td class="center-text">Score 2:0</td>
+                    <td class="center-text big-text">Score 1:0</td>
+                    <td class="center-text big-text">Score 2:0</td>
                 </tr>
             </table>
         </div>
