--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,12 +12,12 @@
             </h1>
         </div>
         <div class="center-text">
-            <h4>
-                <button>START</button>
-                Game time
-                <button>STOP</button>
-            </h4>
-            <h2>00:00:00</h2>
+            <div id="gamestatus">
+                Game time 
+            </div>
+            <button onclick="gameStart();">START</button>
+            <span class="big-text">00:00:00</span>
+            <button onclick="gameStop();">STOP</button>
         </div>
         <div>
             <table>
