--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, user-scalable=no, 
+            initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
         <title>Our Basket</title>
         <script src="index.js"></script>
         <link rel="stylesheet" href="style.css" />
@@ -29,7 +31,26 @@
                     <td class="center-text big-text">Score 1:0</td>
                     <td class="center-text big-text">Score 2:0</td>
                 </tr>
+                <tr>
+                    <td class="center-text">
+                        <div>
+                            <div>Player 1</div>
+                            <div>Player 2</div>
+                            <div>Player 3</div>
+                            <div>Player 4</div>
+                        </div>
+                    </td>
+                    <td class="center-text">
+                        <div>
+                            <div>Player 1</div>
+                            <div>Player 2</div>
+                            <div>Player 3</div>
+                            <div>Player 4</div>
+                        </div>
+                    </td>
+                </tr>
             </table>
+            <div class="center-text">Player time: <span>00:00</span></div>
         </div>
     </body>
 </html>
