--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
         <script src="index.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body onload="updateView(datamodel) ;">
         <div class="center-text">
             <h4 style="margin-bottom:0px">
                 <img class="logo" src="img/LOGO.png" />
