--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,10 +3,11 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, 
             initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
         <title>Our Basket</title>
+        <script src="/socket.io/socket.io.js" type="text/javascript"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body onload="updateView(datamodel) ;">
+    <body onload="load();">
         <div class="center-text">
             <h4 style="margin-bottom:0px">
                 <img class="logo" src="img/LOGO.png" />
