--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,22 +20,22 @@
             </div>
             <div class="big-text" id="gametime">00:00:00</div>
             <div>
-                <button onclick="gameStart();">START</button>
-                <button onclick="gameStop();">STOP</button>
+                <button onclick="gameStart();" id="buttonStart">START</button>
+                <button onclick="gameStop();" id="buttonStop">STOP</button>
             </div>
         </div>
         <div class="topspacer">
             <table>
                 <tr>
-                    <td class="center-text big-text" id="team1">Team 1</td>
-                    <td class="center-text big-text" id="team2">Team 2</td>
+                    <td class="center-text big-text col" id="team1">Team 1</td>
+                    <td class="center-text big-text col" id="team2">Team 2</td>
                 </tr>
                 <tr>
-                    <td class="center-text big-text" id="score1">Score 1:0</td>
-                    <td class="center-text big-text" id="score2">Score 2:0</td>
+                    <td class="center-text big-text col" id="score1">Score 1:0</td>
+                    <td class="center-text big-text col" id="score2">Score 2:0</td>
                 </tr>
                 <tr>
-                    <td class="center-text">
+                    <td class="center-text col">
                         <div>
                             <div id="player1-team1">Player 1</div>
                             <div id="player2-team1">Player 2</div>
@@ -43,7 +43,7 @@
                             <div id="player4-team1">Player 4</div>
                         </div>
                     </td>
-                    <td class="center-text">
+                    <td class="center-text col">
                         <div>
                             <div id="player1-team2">Player 1</div>
                             <div id="player2-team2">Player 2</div>
